--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
@@ -28,9 +32,14 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.3",
+    "xlsx": "^0.18.5",
+    "zod": "^4.0.14",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "eslint-config-prettier": "^10.1.8",
