--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.536.0",
     "next": "^15.4.5",
     "postcss": "^8.5.6",
