Adding Docker images

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Wafd
 spring.datasource.url=jdbc:mysql://localhost:3306/wafd
 spring.datasource.username=root
 
-spring.datasource.password=
+spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
