FE & BE Integration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=Wafd
 
-spring.datasource.url=jdbc:mysql://localhost:3306/wafd
-spring.datasource.username=root
-
-spring.datasource.password=
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/wafd}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -17,3 +16,8 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 
 server.error.include-stacktrace=always
+
+# JWT Configuration
+jwt.secret.key=${JWT_SECRET_KEY}
+jwt.expiration=${JWT_EXPIRATION:3600000}
+jwt.refresh.expiration=${JWT_REFRESH_EXPIRATION:604800000}
