--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "exceljs": "^4.4.0",
