feat: Add Yjs real-time collaboration
- Implement y-websocket for real-time synchronization
- Add yjs-server WebSocket service on port 1234
- Integrate Yjs with hall and pilgrim stores

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 # MySQL Database Configuration
 # Set a strong password for your MySQL database
 MYSQL_ROOT_PASSWORD=YourSecurePasswordHere
+
+# Backend JWT Configuration
+# Generate a strong secret key for JWT token signing (minimum 256 bits)
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production-minimum-32-characters
+JWT_EXPIRATION=3600000
+JWT_REFRESH_EXPIRATION=604800000
+
+# Yjs WebSocket Server Configuration
+YJS_WS_PORT=1234
+YJS_WS_HOST=localhost
