--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "xlsx": "^0.18.5",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
