--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/wafd
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+      JWT_EXPIRATION_MS: ${JWT_EXPIRATION_MS:-86400000}
     depends_on:
       mysql:
         condition: service_healthy
@@ -43,16 +45,41 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: http://localhost:8080/api/v1
+        NEXT_PUBLIC_YJS_WS_URL: ws://localhost:1234
     container_name: wafd-frontend
     restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
-      NEXT_PUBLIC_API_URL: http://localhost:8080
+      NEXT_PUBLIC_API_URL: http://localhost:8080/api/v1
+      NEXT_PUBLIC_YJS_WS_URL: ws://localhost:1234
     depends_on:
       - backend
+      - yjs-server
     networks:
       - wafd-network
+
+  # Yjs WebSocket Server
+  yjs-server:
+    build:
+      context: ./yjs-server
+      dockerfile: Dockerfile
+    container_name: wafd-yjs-server
+    restart: unless-stopped
+    ports:
+      - "${YJS_WS_PORT:-1234}:1234"
+    environment:
+      PORT: 1234
+      HOST: 0.0.0.0
+    networks:
+      - wafd-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:1234"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   mysql-data:
