--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
 NODE_ENV=development
 NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
+
+# Yjs WebSocket Server URL
+NEXT_PUBLIC_YJS_WS_URL=ws://localhost:1234
