--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,6 +21,9 @@ COPY . .
 ARG NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
+ARG NEXT_PUBLIC_YJS_WS_URL
+ENV NEXT_PUBLIC_YJS_WS_URL=$NEXT_PUBLIC_YJS_WS_URL
+
 # Build the Next.js application
 RUN npm run build
 
