Preformance & Search or Filtering Improvements

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,11 @@ server.error.include-stacktrace=always
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration=${JWT_EXPIRATION:3600000}
 jwt.refresh.expiration=${JWT_REFRESH_EXPIRATION:604800000}
+
+# Response Compression Configuration
+server.compression.enabled=true
+server.compression.min-response-size=1024
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+
+# Cache Configuration
+spring.cache.type=simple
